syntax = "proto3";

option java_package = "com.kotlingrpc.proto";

// ユーザーサービス
service UserService {
  // ユーザー取得
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
// ユーザー取得リクエスト
message GetUserRequest {
  int32 id = 1; // ユーザーID
}
// ユーザー取得レスポンス
message GetUserResponse {
  string mail = 1; // メール
}
